--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,9 +1,15 @@
+body
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif
 #history, #options
   float: left
-  width: 30%
   ul
+    padding: 0
     li
       list-style: none
+#history
+  width: 35%
+#options
+  width: 25%
 #rankings
   float: left
   width: 40%
@@ -20,14 +26,18 @@
       color: orange
       font-weight: bold
       text-transform: uppercase
+  .rulz
+    margin-top: 20px
 
 #options
   #user_ig_name
     width: 220px
+    color: grey
   .match-results
     width: 310px
     margin-top: 40px
     select
+      color: grey
       width: 225px
 
 .red
@@ -42,3 +52,7 @@
   width: 100px
 .w150
   width: 150px
+.w233
+  width: 233px
+.w401
+  width: 401px
