--- a/app/views/user/_rankings.haml
+++ b/app/views/user/_rankings.haml
@@ -4,11 +4,11 @@
       Rank
     %th.w150
       Ingame Name
-    %th.w100
+    %th.w80
       Wins
-    %th.w100
+    %th.w80
       Looses
-    %th.w100
+    %th.w80
       Ratio
     %th.w80
       Elo
@@ -18,7 +18,7 @@
       %td
         = index + 1
       %td
-        = user.ig_name
+        = link_to user.ig_name, "http://www.lolking.net/search?name=" + user.ig_name, :target => "_blank"
       %td
         = user.wins
       %td
@@ -29,3 +29,39 @@
         = user.elo
       %td
         = button_to "Löschen", user, :confirm => "Willst du <#{user.ig_name}> wirklich entfernen?", :method => :delete
+
+.rulz
+  %table
+    %tr
+      %th.w233
+        Regelwerk
+    %tr
+      %td
+        Match Mode
+      %td.w401
+        1v1
+    %tr
+      %td
+        Play Mode
+      %td 
+        Best of One (bo1)
+    %tr
+      %td
+        Ban Mode
+      %td 
+        1-1-1-1-1-1 ( Each Team bans 3 champions )
+    %tr
+      %td
+        Map
+      %td
+        Howling Abyss
+    %tr
+      %td
+        How to ban
+      %td 
+        The lower placed team starts with the bans.
+    %tr
+      %td
+        Pick Mode
+      %td 
+        Blind Pick
