--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -8,6 +8,11 @@ body
       list-style: none
 #history
   width: 35%
+  h2
+    text-decoration: underline
+    margin-top: 47px
+  img
+    margin-left: 30%
 #options
   width: 25%
 #rankings
