--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -19,6 +19,10 @@ body
     padding: 0
     li
       list-style: none
+  img
+    margin-top: 15px
+    margin-bottom: 15px
+
 #rulz, #history, #options
   margin-top: 20px
 
@@ -38,6 +42,7 @@ body
       text-transform: uppercase
 
 #options
+  background-color: white
   h5
     margin: 0px
     color: grey
@@ -90,12 +95,14 @@ body
     width: 250px
     margin-left: -220px
     z-index: -1
+    margin-bottom: 0px
   .img-right
     position: absolute
     left: 638px
     width: 410px
     bottom: 0px
     z-index: -1
+    margin-bottom: 0px
   .red
     color: red
   .green
