--- a/app/views/user/_rulz.haml
+++ b/app/views/user/_rulz.haml
@@ -36,4 +36,4 @@
     %td
       Elo Berechnung
     %td 
-      Beispiel: Spieler A und B besitzen beide 1200 Elo. Spieler A(12 kills, 4 death) besiegt Spieler B(4 kills, 12 death). Spieler A erhält +45 Elo und Spieler B -45 Elo. Wäre das kill/death Verhältnis vertauscht, so würde Spieler A für den Sieg +5 Elo bekommen und Spieler B nur -5 Elo verlieren auf grund der dennoch guten Leistung. Dieses System sollte die reale Spielerstärke besser wiederspiegeln! Neben diesem sonderverhalten funktioniert das Elo-System nach wie gewohnt und orientiert sich am Elo-Wert der Spieler für die Punkteberechnung. 
+      Beispiel: Spieler A und B besitzen beide 1200 Elo. Spieler A(12 kills, 4 death) besiegt Spieler B(4 kills, 12 death). Spieler A erhält +45 Elo und Spieler B -45 Elo. Wäre das kill/death Verhältnis vertauscht, so würde Spieler A für den Sieg +5 Elo bekommen und Spieler B nur -5 Elo verlieren auf grund der dennoch guten Leistung. Dieses System sollte die reale Spielerstärke besser wiederspiegeln! Neben diesem sonderverhalten funktioniert das Elo-System wie gewohnt und orientiert sich am Elo-Wert der Spieler für die Punkteberechnung. 
